--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div id ="typesOfAccidents">
         <div id="typesHeader">
             <div id="left">
-                <h3 id="TypesOfAccidentsHeading"><span id="orange">TYPES OF ACCIDENTS WE HANDLE</span></h3>
+                <h3 id="TypesOfAccidentsHeading"><span id="orange">02 - TYPES OF ACCIDENTS WE HANDLE</span></h3>
                 <h1> Motor Vehicle Accidents</h1>
                 <p>Though Benji Accident Injury Lawyers can help you with virtually any personal injury situation, we have especially broad experience with motor vehicle accidents.</p> 
             </div>
@@ -250,7 +250,7 @@
                 <h1>Workplace Injuries</h1>
             </div>
             <div id="right-side">
-                <p>You expect your employer to provide appropriate training and a safe work environment. But despite it all, worker injuries occur every single day. If that’s you, you’ll probably have considerable expenses to cover. You might also be worried your job may be in jeopardy, or whether it will even still be there when you return to work. Our Los Angeles personal injury lawywers can help you with a workers compensation or third-party claim that can help you recover compensation and prevent the loss of your job. </p>
+                <p>You expect your employer to provide appropriate training and a safe work environment. But despite it all, worker injuries occur every single day. If that’s you, you’ll probably have considerable expenses to cover. You might also be worried your job may be in jeopardy, or whether it will even still be there when you return to work. Our Los Angeles personal injury lawyers can help you with a workers compensation or third-party claim that can help you recover compensation and prevent the loss of your job. </p>
                 <div id="click-box"><h4>WORKPLACE INJURIES </h4></div>
             </div>
 
@@ -272,12 +272,12 @@
         <div class="align">
             <div class="left-column">
                 <div class="head">
-                    <h4>02</h4>
+                    <h4>03</h4>
                     <div class="dash"></div>
-                    <h4>AWWARDS & ACCOLADES</h4>
+                    <h4>AWARDS & ACCOLADES</h4>
                 </div>
                 <h1>We have a track record of obtaining large recoveries.</h1>
-                <h4>Our Personal Injury Lawyers have recovered millions in damages for our clients. <span id="orange">In fact, we received a top jury verdict awward for recovering $2.2M </span> by way of a jury trial for a client who was hit from behind and the city of orange county refused to settle the case so we took them to court.</h4>
+                <h4>Our Personal Injury Lawyers have recovered millions in damages for our clients. <span id="orange">In fact, we received a top jury verdict award for recovering $2.2M </span> by way of a jury trial for a client who was hit from behind and the city of orange county refused to settle the case so we took them to court.</h4>
                 <h1> What is the Top 20 Verdict Award?</h1>
                 <h4> It means that out of all the injury cases that were taken to court over the span of a year, our <span id="orange"> obtained a recovery in the top 20 </span> out of hundereds of cases that were heard by a jury</h4>
 
@@ -307,6 +307,41 @@
                 </div>
 
             </div>
+        </div>
+    </div>
+    <div id="reviewCallOut">
+        <div class="alignReview">
+            <div class="left-column-review">
+                <img src="Assets/icons8-quote-left-50.png"><p>I was in an accident in January of last year. I was up to my eyeballs in medical bills for an accident that wasn't my fault. A friend referred me to Benji Personal Injury and they were amazing. They have such great communication and made sure I was well informed through every step of my case. I would recommend this firm to anyone in need of a lawyer. Thank you for all your help!</p>
+                <h2>- Karen Ray</h2>
+            </div>
+            <div class="right-columnReview">
+                <div id="reviewLeftText">
+                    <div id="currentRating">5.0</div>
+                    <div id="starCollectionCall">
+                        <img src="Assets/star.png" alt="">
+                        <img src="Assets/star.png" alt="">
+                        <img src="Assets/star.png" alt="">
+                        <img src="Assets/star.png" alt="">
+                        <img src="Assets/star.png" alt="">
+                    </div>
+                    <div>AVG. GOOGLE RATING</div>
+                </div>
+                <img src="Assets/hp-client-review.webp">
+
+            </div>
+        </div>
+    </div>
+    <div id="cta">
+        <div id="align">
+            <div id="subRecommend">
+                <h1> "I would recommend this firm to anyone in need of a lawyer..."</h1>
+            </div>
+            <div id ="fullWidthConsultReview">
+                <h3>REQUEST A FREE CONSULTATION - (866) 666-6656</h3>
+
+            </div>
+
         </div>
     </div>
     <div id="content-Container">
@@ -372,6 +407,45 @@
             </div>
         </div>
     </div>
+    <div id="beSomeone">
+        <div class="align">
+            <div class="left-column">
+                <h2> You want justice. You want results.</h2>
+                <h1> Be someone who gets it.</h1>
+                <p>The entire Benji office is a team with many, many miles of Los Angeles-based injury law experience. We know all the insurance companies. And they know we mean business. When you call, you’ll always speak with a personal injury attorney, not an assistant. And there will never be a fee until you win.</p>
+        </div>
+        <div class="right-column">
+            <div id="whereBlurb">
+                <h2>Our personal injury lawyers help people throughout the state of California and are based in Los Angeles.</h2>
+                <p>Our personal injury attorneys serve Los Angeles as well as neighboring cities including: Orange County, San Fernando Valley, Santa Monica, Long Beach, Malibu, Pasadena, Beverly Hills, Manhattan Beach, Redondo Beach, Burbank and all other cities and counties in California.</p>
+            </div>
+        </div>
+        </div>
+    </div> 
+    <div id="freeConsultationContainer">
+        <img id="freeconsultlogoimage"src="Assets/free-consultation-icon.svg" alt="freeConslutLogo">
+        <div class="align">
+            <div class="left-column">
+                <h1> Let's Get Started</h1>
+                <h2> Be someone who gets it.</h2>
+                <p>Serious injuries don’t happen on a 9-to-5 schedule, which is why we are always available to help if you have been hurt. Our team is available around the clock to provide the support you need.</p>
+        </div>
+        <div class="right-column">
+            <div id="contactForm">
+                <form>
+                    <label for="fname">Name:</label>
+                    <input class="inputLabel" type="text" id="fname" name="fname"> <br>
+                    <label  for="number">Number:</label>
+                    <input class="inputLabel" type="text" id="number" name="number"> <br>
+                    <label for="email">Email:</label>
+                    <input class="inputLabel" type="text" id="email" name="email">
+                    <input id="submitFormButton" type="submit" value="SUBMIT FORM">
+                </form>
+                
+            </div>
+        </div>
+        </div>
+    </div> 
     
 </body>
 </html>
