--- a/index.html
+++ b/index.html
@@ -344,6 +344,34 @@
 
         </div>
     </div>
+    <div id = "personalInjuryProcess">
+        <div class="align">
+            <div class="left-column">
+                <div class="head">
+                    <h4>04</h4>
+                    <div class="dash"></div>
+                    <h4>PERSONAL INJURY PROCESS</h4>
+                </div>
+                <h1>What Should I Expect In My Personal Injury Case?</h1>
+                <h4>When you call Benji Accident Injury Lawyers, P.C., we will immediately set you on the path to recovering compensation for your injuries.</h4>
+
+            </div>
+            <div class="right-column">
+                <div id="whatToExpectCard">
+                    <div id="whatToExpectLeft">
+                        <img src="Assets/Daniel Benji_new.png">
+                    </div>
+                    <div id="whatToExpectRight">
+                        <h1>Consult with a Los Angeles Injury Attorney</h1>
+                        <p> <strong>Step one is to speak with a personal injury lawyer near you who listens first and acts second.</strong> We’ll evaluate the facts of your case and your understanding of events – your side of the story. While you concentrate on healing, our injury attorneys dive in to create a comprehensive roadmap for your case and realistic expectations for settlement.</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <div id="content-Container">
         <h1> <span id="orange">If We Take Your Case, the Process May Look Something Like This:</span></h1>
     </div>
