finished car/truck layout

--- a/index.html
+++ b/index.html
@@ -165,9 +165,45 @@
         </div>
         <div id ="car">
             <div id="carLeft">
-                <div id="leftcol">
+                <div id="thisCar">
                     <img src="Assets/Homepage_Practice-Areas_Car-Accidents.webp">
-                </div> 
+                </div>
+                <div id="carAccidentOverview">
+                </div>
+
+                <div id="leftcol">
+                    <div id="filterBox">
+                        <div class="filterBoxHeading">
+                            <h2> Car Accident Overview</h2>
+                        </div> 
+                        <div class="filterCard" id="infoFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-info-50.png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>INFO</h5>
+                            </div>
+                        </div>
+                        <div class="filterCard" id="moneyFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-dollar-sign-50.png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>RESULTS</h5>
+                            </div>
+                        </div>
+                        <div class="filterCard" id = "pageFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-right-arrow-50 (1).png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>PAGE</h5>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+                </div>  
             </div>
             <div id="carRight">
                 <h1>Car Accidents in Los Angeles</h1>
@@ -175,13 +211,49 @@
             </div>
 
         </div>
-        <div id="truck">
-            <div id="truckLeft">
-                <div id="leftcol">
+        <div id ="car">
+            <div id="carLeft">
+                <div id="thisCar">
                     <img src="Assets/Homepage_Practice-Areas_Truck-Accidents.webp">
-                </div> 
+                </div>
+                <div id="carAccidentOverview">
+                </div>
+
+                <div id="leftcol">
+                    <div id="filterBox">
+                        <div class="filterBoxHeading">
+                            <h2> Truck Accident Overview</h2>
+                        </div> 
+                        <div class="filterCard" id="infoFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-info-50.png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>INFO</h5>
+                            </div>
+                        </div>
+                        <div class="filterCard" id="moneyFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-dollar-sign-50.png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>RESULTS</h5>
+                            </div>
+                        </div>
+                        <div class="filterCard" id = "pageFilterBox">
+                            <div class="filterIcon">
+                                <img src="Assets/icons8-right-arrow-50 (1).png">
+                            </div>
+                            <div class="filterLabel">
+                                <h5>PAGE</h5>
+                            </div>
+                            
+                        </div>
+
+                    </div>
+                </div>  
             </div>
-            <div id="truckRight">
+            <div id="carRight">
                 <h1>Truck Accidents in Los Angeles</h1>
                 <p>Los Angeles is loaded with 18-wheelers. This is a port city and big trucks are as common as potholes. But as almost everyone knows, if a car gets into an altercation with a semi, the car always loses. We can change that if you go to court with our personal injury lawyers.</p>
             </div>
