--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <div id="main">
         <div id="mainLeft">
-            <div id="credential1"><img src="Assets/Stamp - White.png" alt=""></div>
+            <div id="credential1"><img src="Assets/NTL-Top-100-Brass-Badge-300px.png" alt=""></div>
             <div id="textBox">
                 <div id="align-text-box">
                     <h1 id="mainTag">Los Angeles Personal Injury Lawyers</h1>
@@ -211,7 +211,7 @@
             </div>
 
         </div>
-        <div id ="car">
+        <div id ="truck">
             <div id="carLeft">
                 <div id="thisCar">
                     <img src="Assets/Homepage_Practice-Areas_Truck-Accidents.webp">
@@ -253,7 +253,7 @@
                     </div>
                 </div>  
             </div>
-            <div id="carRight">
+            <div id="truckRight">
                 <h1>Truck Accidents in Los Angeles</h1>
                 <p>Los Angeles is loaded with 18-wheelers. This is a port city and big trucks are as common as potholes. But as almost everyone knows, if a car gets into an altercation with a semi, the car always loses. We can change that if you go to court with our personal injury lawyers.</p>
             </div>
@@ -288,7 +288,7 @@
             <div id="left-side">
                 <h1>Premises Liability</h1>
             </div>
-            <div id="right-side">
+            <div id="premise-right-side">
                 <p>The property you live, work, and play on should be safe. But every day, people are harmed in situations that could have easily been prevented. The owner of that property is responsible for making sure their premises reasonably protect those within. Our premises liability lawyers can help hold them (or their businesses) accountable when they fail to prevent avoidable injury.</p>
                 <div id="click-box"><h4>PREMISES LIABILITY </h4></div>
             </div>
@@ -299,7 +299,7 @@
             <div id="left-side">
                 <h1>Products Liability</h1>
             </div>
-            <div id="right-side">
+            <div id="product-right-side">
                 <p>Sometimes, products we expect to be safe…aren’t. Many people every year are hurt by products whose design flaws, defects or inadequate warnings result in lasting injury. And it’s not right. A Benji products liability attorney can help identify which of the many parties involved are responsible. These cases are investigation-heavy, often requiring in-depth analysis and expert testimony. They are complex and time-consuming. They can be difficult to win because companies are quick to pour significant resources into avoiding responsibility for their negligence – and your injuries. </p>
                 <div id="click-box"><h4>PRODUCTS LIABILITY </h4></div>
             </div>
@@ -310,7 +310,7 @@
             <div id="left-side">
                 <h1>Medical Malpractice</h1>
             </div>
-            <div id="right-side">
+            <div id="medical-right-side">
                 <p>We naturally trust doctors, nurses and medical staff with our lives. But medicine isn’t an exact science and mistakes can happen. If you are ever harmed by the negligence of any medical worker, facility or lab - or suffer a preventable complication that does real harm - you may have a valid malpractice suit. But it’s complicated and you’ll need help. That would be us.</p>
                 <div id="click-box"><h4>MEDICAL MALPRACTICE </h4></div>
             </div>
@@ -321,7 +321,7 @@
             <div id="left-side">
                 <h1>Workplace Injuries</h1>
             </div>
-            <div id="right-side">
+            <div id="work-right-side">
                 <p>You expect your employer to provide appropriate training and a safe work environment. But despite it all, worker injuries occur every single day. If that’s you, you’ll probably have considerable expenses to cover. You might also be worried your job may be in jeopardy, or whether it will even still be there when you return to work. Our Los Angeles personal injury lawyers can help you with a workers compensation or third-party claim that can help you recover compensation and prevent the loss of your job. </p>
                 <div id="click-box"><h4>WORKPLACE INJURIES </h4></div>
             </div>
@@ -332,7 +332,7 @@
             <div id="left-side">
                 <h1>Wrongful Death</h1>
             </div>
-            <div id="right-side">
+            <div id="wrong-right-side">
                 <p>California law allows the personal representative of a deceased person to bring a claim against the person responsible for their death. Surviving spouses, children, family members and estate trustees who handle the deceased’s estate are eligible to file suit.In cases where the deceased was partly responsible for their own death, liability may be considered under comparative negligence rules, and recovery might be prohibited in certain situations. </p>
                 <div id="click-box"><h4>WRONGFUL DEATH </h4></div>
             </div>
@@ -546,6 +546,7 @@
         </div>
         </div>
     </div> 
-    
+<script src="script.js"></script>
+
 </body>
 </html>
