added how you were injured nav

--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
     <title>Document</title>
 </head>
 <body>
+    <div id ="howSubNav">
+        <div id = "howSubNav-col-1">
+            <h1>How Were You Injured?</h1>
+        </div>
+        <div id = "howSubNav-col-2">
+            <a href=""><p> Value of a case</p></a>
+            <a href=""><p> Car Accidents </p></a>
+            <a href=""><p> Truck Accidents</p></a>
+            <a href=""><p> Bicycle Accidents</p></a>
+            <a href=""><p> Motorcycle Accidents</p> </a>
+            <a href=""><p> Pedestrian Accidents</p> </a>
+            <a href=""><p> Uber & Lyft Accidents</p> </a>
+
+        </div>
+        <div id = "howSubNav-col-3">
+            <a href=""><p> Bus Accidents</p></a>
+            <a href=""><p> Traumatic Brain Injuries </p></a>
+            <a href=""><p> Child Injuries</p></a>
+            <a href=""><p> Wrongful Death</p></a>
+            <a href=""><p> Dog Bites</p> </a>
+            <a href=""><p> Neck & Back Injuries</p> </a>
+        </div>
+    </div>
     <nav id="mainNav">
         <div id ="logo"><img src="Assets/benji-pi-logo-png-white.png" alt=""></div>
         <div id ="otherLinks">
