--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
             <div id = "howSubNav-col-2">
                 <a href=""><p> Value of a case</p></a>
-                <a href="file:///C:/Users/kathe/OneDrive/Documents/Daniel%20Benji/car-accident-lawyer.html"><p> Car Accidents </p></a>
+                <a href="C:\Users\kathe\OneDrive\Documents\Daniel Benji\car-accident-lawyer.html"><p> Car Accidents </p></a>
                 <a href=""><p> Truck Accidents</p></a>
                 <a href=""><p> Bicycle Accidents</p></a>
-                <a href=""><p> Motorcycle Accidents</p> </a>
+                <a href="file:///C:/Users/kathe/OneDrive/Documents/Daniel%20Benji/car-accident-lawyer.html"><p> Motorcycle Accidents</p> </a>
                 <a href=""><p> Pedestrian Accidents</p> </a>
                 <a href=""><p> Uber & Lyft Accidents</p> </a>
     
