--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div id = "howSubNav-col-2">
                 <a href=""><p> Value of a case</p></a>
                 <a href="C:\Users\kathe\OneDrive\Documents\Daniel Benji\car-accident-lawyer.html"><p> Car Accidents </p></a>
-                <a href=""><p> Truck Accidents</p></a>
-                <a href=""><p> Bicycle Accidents</p></a>
+                <a href="C:\Users\kathe\OneDrive\Documents\Daniel Benji\los-angeles-truck-accident-lawyer.html"><p> Truck Accidents</p></a>
+                <a href="file:///C:/Users/kathe/OneDrive/Documents/Daniel%20Benji/bicycle-accident-lawyer.html"><p> Bicycle Accidents</p></a>
                 <a href="C:\Users\kathe\OneDrive\Documents\Daniel Benji\motorcycle-accident-lawyer.html"><p> Motorcycle Accidents</p> </a>
-                <a href=""><p> Pedestrian Accidents</p> </a>
-                <a href=""><p> Uber & Lyft Accidents</p> </a>
+                <a href="file:///C:/Users/kathe/OneDrive/Documents/Daniel%20Benji/pedestrian-accident-attorney.html"><p> Pedestrian Accidents</p> </a>
+                <a href="C:\Users\kathe\OneDrive\Documents\Daniel Benji\uber-accident-lawyer.html"><p> Uber & Lyft Accidents</p> </a>
     
             </div>
             <div id = "howSubNav-col-3">
